--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,6 +6,7 @@
         <img src="https://image.tmdb.org/t/p/w500/{{trend.poster_path}}" alt="">
         <h5 class="card-title">{{ trend.title }}</h5>
         <p class="card-text flex-grow-1">{{ trend.overview}}</p>
+        <p class="card-text text-muted justify-content-between d-flex"><span>Rating: </span><span> <i class="fa-solid fa-star fa-fade" style="color: #FFD43B;"></i> {{ trend.vote_average|number:'1.0-1' }}/10</span></p>
         <a class="btn btn-primary" (click)="getDetails(trend.id)" routerLink="{{trend.id}}">More</a>
       </div>
     }
@@ -21,19 +22,19 @@
             <h2 class="fw-bold">Details</h2>
           }
         </div>
-      <div class="row g-1 d-flex align-items-center justify-content-center">
+      <div class="row g-2 d-flex justify-content-center mt-2">
         <div class="col-md-4 me-4">
           <img class="img-fluid rounded-start w-100" [src]="'https://image.tmdb.org/t/p/w500/' + trend.poster_path" alt="{{ trend.title }}">
         </div>
         <div class="col-md-7">
-          <div class="details-card-body mt-4 flex-grow-1">
+          <div class="details-card-body flex-grow-1">
             <strong>Overview: </strong>
             <p class="details-card-text">{{ trend.overview }}</p>
             @if(trend.release_date){
               <p class="details-card-text"><small class="text-muted">Release Date: {{ trend.release_date }}</small></p>
             }
             <p class="details-card-text"><small class="text-muted">Language: {{ trend.original_language }}</small></p>
-            <p class="details-card-text"><small class="text-muted">Rating: {{ trend.vote_average|number:'1.0-1' }}</small></p>
+            <p class="details-card-text"><small class="text-muted">Rating:  {{ trend.vote_average|number:'1.0-1' }}  </small>  <i class="fa-solid fa-star fa-fade" style="color: #FFD43B;"></i> </p>
           </div>
         </div>
         <a routerLink="/list" class="position-absolute w-25 end-0 bottom-0 btn btn-dark m-3" (click)="closeDetails()">close</a>
