--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex justify-content-center align-items-center bg-light px-5 py-3">
-  <ul class="d-flex list-unstyled gap-3 m-0">
-    <li><a routerLink="/list" routerLinkActive="active" class="text-decoration-none text-black">All</a></li>
-    <li><a routerLink="/people" routerLinkActive="active" class="text-decoration-none text-black">People</a></li>
-    <li><a routerLink="/movie" routerLinkActive="active" class="text-decoration-none text-black">Movie</a></li>
-    <li><a routerLink="/tv" routerLinkActive="active" class="text-decoration-none text-black">TV</a></li>
+<div class="d-flex justify-content-center align-items-center bg-dark-nav px-5 py-3">
+  <ul class="d-flex list-unstyled gap-3 m-0 text-light-nav">
+    <li><a routerLink="/list" routerLinkActive="active" class="text-decoration-none">All</a></li>
+    <li><a routerLink="/people" routerLinkActive="active" class="text-decoration-none">People</a></li>
+    <li><a routerLink="/movie" routerLinkActive="active" class="text-decoration-none">Movie</a></li>
+    <li><a routerLink="/tv" routerLinkActive="active" class="text-decoration-none">TV</a></li>
   </ul>
 </div>
