--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,56 +1,102 @@
-.card{
-    border: 1px solid #ddd;
-    border-radius: 12px;
-    padding: 16px;
-    margin: 12px;
-    width: 350px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease;
-    background-color: #fff;
+.card {
+  border: 1px solid #3d3d3d;
+  border-radius: 12px;
+  padding: 16px;
+  margin: 12px;
+  width: 350px;
+  text-align: center;
+  box-shadow: 0 2px 7px rgba(78, 78, 78, 0.322);
+  transition: transform 0.2s ease;
+  background-color: #9b9b9b00;
+  color: #fff;
+}
+
+.card:hover {
+  transform: scale(1.03);
+}
+
+.card img {
+  align-self: center;
+  width: 90%;
+  height: 280px;
+  border-radius: 8px;
+  margin: 10px 0 20px;
+}
+
+.card h1 {
+  font-size: 1.2rem;
+  margin: 15px 0 20px;
+  color: #fff;
+}
+
+.card p {
+  margin: 10px 0;
+  font-size: 0.95rem;
+  color: #ccc;
+}
+.btn-custom{
+  background-color: #004775;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.btn-custom:hover{
+  background-color: #004777;
+  box-shadow: 0 4px 8px rgba(48, 48, 48, 0.2);
+}
+.details-container {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.details-card {
+  background-color: #222;
+  padding: 20px;
+  width: 800px;
+  height: 500px;
+  border-radius: 20px;
+}
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 24px;
+  font-weight: bold;
+  color: #3498db;
+  text-align: center;
+}
+
+.spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .card:hover {
-    transform: scale(1.03);
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .card img {
-    align-self: center;
-    width: 90%;
-    height: 250px;
-    border-radius: 8px;
-    margin: 10px 0 20px;
-  }
-  
-  .card h1 {
-    font-size: 1.2rem;
-    margin: 15px 0 20px;
-    color: #333;
-  }
-  
-  .card p {
-    margin: 10px 0;
-    font-size: 0.95rem;
-    color: #666;
-  }
-  
-  .details-container{
-    background-color: #33333386;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position:fixed;
-    top:0;
-    left:0;
-  }
-  .details-card{
-    background-color: #fff;
-    padding:20px;
-    width:800px;
-    height:500px;
-    border-radius: 20px;
-  }
-  
-  
+}
+
+.bg-dark {
+  background-color: #1d1d1d !important; ;
+}
+
