--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -12,13 +12,32 @@ ul li {
 }
 
 ul li:hover {
-  background-color: #dee2e6;
+  background-color: #444;
 }
-.active{
+
+.active {
   font-weight: bold;
-  color: #007bff;
+  color: #1e90ff;
 }
-h1{
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+h1 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: bold;
+}
+
+.bg-dark-nav {
+  background-color: #2c2c2c;
+  box-shadow: 0 4px 8px rgba(241, 241, 241, 0.3);
+}
+
+.text-light-nav {
+  color: #f8f9fa;
+}
+
+.text-light-nav a {
+  color: #f8f9fa;
+}
+
+.text-light-nav a:hover {
+  color: #1e90ff;
 }
