--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -45,10 +45,10 @@
       <div #details class="details-container">
         <div class="details-card position-relative bg-dark text-white">
           <div class="row g-2 d-flex justify-content-center mt-2 align-items-center">
-            <div class="col-md-4 me-4">
-              <img class="img-fluid rounded-4 w-100" [src]="'https://image.tmdb.org/t/p/w500/' + selectedOne.profile_path" alt="{{ selectedOne.name }}">
+            <div class="col-md-5 me-4">
+              <img class="img-fluid rounded-4" [src]="'https://image.tmdb.org/t/p/w500/' + selectedOne.profile_path" alt="{{ selectedOne.name }}">
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
               <h2 class="fw-bold mt-3 mb-2">{{ selectedOne.name }}</h2>
               <div class="details-card-body flex-grow-1">
                 <strong>Details: </strong>
